# Kastro_qa_guru_poetry_dependency_management_hw18

./: README.md
poetry_project/: pyproject.toml
