[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Silver <testingbugsrus@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.0"
selene = "2.0.0rc2"


[tool.poetry.group.dev.dependencies]
pylint = "2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
